# url-shortener

./: README.md  pyproject.toml
url_shortener/: __init__.py  init_db.py  links.db
url_shortener/SQL/: schema.sql
url_shortener/templates/: index.html  index.html_old
