[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["Shravan Mandava <shravan@mandava8.com>"]
readme = "README.md"
packages = [{include = "url_shortener"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"

[tool.poetry.scripts]
main = "url_shortener:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

